# mobagen

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  buildconfig.mk  config.cmake  doceditor.js  doceditor.wasm  midasminer.js  midasminer.wasm  simple.js  simple.wasm  tests.js  tests.wasm  uploader.js  uploader.wasm
cmake/: macros.cmake
cmake/Hunter/: config.cmake
dependencies/: CMakeLists.txt
docs/: Architecture.md  INSPIRATION.md  Networking.md
engine/: CMakeLists.txt  Component.hpp  EngineIOStream.cpp  EngineIOStream.hpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.h  GuiManager.cpp  HttpVerb.hpp  Mobagen.hpp  PathUtils.cpp  PathUtils.hpp  Random.hpp  Shader.hpp  WebRequest.cpp  WebRequest.hpp  WwwForm.cpp  WwwForm.hpp  WwwTranscoder.hpp  iallocator.hpp  imguifilesystem_TEST_MIGRATION.cpp  imguifilesystem_TEST_MIGRATION.h  stdafx.h  string.cpp  string.hpp  time.cpp  time.hpp
engine/components/: PerspectiveCamera.cpp  SpotLight.cpp
engine/core/: GameLoop.cpp  GameLoop.hpp  IUpdatable.hpp
engine/core/containers/: types.hpp
engine/networking/: CaseInsensitiveCompare.hpp  Error.hpp  Request.cpp  Request.hpp  Response.hpp
examples/: CMakeLists.txt
examples/doceditor/: main.cpp
examples/filedialog/: CMakeLists.txt  filedialog.cpp  filedialog.hpp  main.cpp
examples/midasminer/: CMakeLists.txt  Menu.cpp
examples/startpage/: CMakeLists.txt  main.cpp  startpage.cpp  startpage.hpp
examples/uploader/: EditorGUI.cpp  EditorGUI.hpp  main.cpp
game/: CMakeLists.txt  main.cpp
html/: index.html  startpage.html
old/: CMakeLists.txt  azure.yml
old/android-project/app/: build.gradle
old/engine/: CMakeLists.txt  Ray.hpp  Transform.hpp  WebRequest.cpp  WwwTranscoder.hpp
old/engine/components/: BaseLight.cpp  FreeLook.cpp  FreeMove.cpp  OrthoCamera.cpp  PointLight.cpp
old/engine/networking/: CaseInsensitiveCompare.cpp  Error.cpp  Error.hpp  Response.cpp  Response.hpp
old/scripts/: cmake-mingw-linux.sh  cmake-mingw-osx.sh
scripts/: android-build-and-run.sh  android-setup.sh  cmake-android.sh  emscripten-docker.sh  emscripten-generate.sh  emscripten-install.sh  environment.sh  mingw-build.bat  mingw-build.sh  mingw-install-toolkit.sh  oneliner.bat  oneliner.sh  setup-windows.ps1
