file(GLOB TARGET_INC ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
file(GLOB TARGET_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c )

SET(TARGET_SRC ${TARGET_SRC} ${TARGET_INC} )

IF(EMSCRIPTEN)
ELSE()
  message(STATUS "not emscripten build")
  find_library(SDL2 SDL2)
  include_directories(${SDL2_INCLUDE_DIR})
ENDIF()

if(ANDROID)
  message(STATUS "android build")
  add_library(main SHARED main.cpp)
  target_sources(main PRIVATE main.cpp)
  target_link_libraries(main SDL2 ${SDL2_LIBRARY})
elseif(IOS)
  message(STATUS "ios build")
  # FIXME
  add_library(main ${TARGET_SRC})
else()
  message(STATUS "desktop build")
  add_executable(main ${TARGET_SRC})
  target_link_libraries (main SDL2 ${SDL2_INCLUDE_DIR})
endif()
